--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-date-picker": "^3.2.9",
