--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
+    "@react-navigation/material-top-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "firebase": "^8.2.9",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-date-picker": "^3.2.9",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-image-picker": "^3.2.1",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.17.1"
+    "react-native-screens": "^2.17.1",
+    "react-native-tab-view": "^2.15.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
