--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/material-top-tabs": "^5.3.14",
@@ -19,7 +21,7 @@
     "firebase": "^8.2.9",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "^0.64.1",
     "react-native-date-picker": "^3.2.9",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-image-picker": "^2.3.4",
@@ -28,6 +30,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-tab-view": "^2.15.2",
+    "react-number-format": "^4.5.5",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
